Update .gitignore, delete generated files
configure and config.h.in were in .gitignore but still in git,
and .gitignore was missing some other generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@
 *.o
 *~
 ,*
+.cproject
+.gdbinit
 .libs
+.project
+.settings/
 Makefile
 Makefile.bak
 autom4te.cache
@@ -15,23 +19,22 @@ config.log
 config.status
 config.sub
 configure
-dense
+denser/dense
 errors
 lib*.a
 libtool
 ltmain.sh
 q_runner
 simalias
+simc
 simexpander
 simrbl
 simreverse
 simsendmail
 simta
+simvacation/simunvacation
+simvacation/simvacation
+simvacation/simvacreport
 sla
 stamp-*
 tlsconnect
-.cproject
-.gdbinit
-.project
-.settings/
-
