--- a/libsnet/Makefile.in
+++ b/libsnet/Makefile.in
@@ -2,8 +2,6 @@ SHELL=/bin/sh
 
 srcdir=@srcdir@
 VPATH=@srcdir@
-SRCPFX=$(srcdir)/
-SRCPFX_INCPATH=-I$(srcdir)/denser -I$(srcdir)/libsnet -I$(srcdir)
 
 prefix      =	@prefix@
 libdir      =	@libdir@
@@ -11,8 +9,9 @@ includedir  =	@includedir@
 
 SRC  = snet.c
 OBJ  = snet.o
+LOBJ = snet.lo
 
-INCPATH=	@CPPFLAGS@ -I. $(SRCPFX_INCPATH)
+INCPATH=	@CPPFLAGS@ -I.
 DEFS=		
 OPTOPTS=	@OPTOPTS@
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH} @CFLAGS@
@@ -28,25 +27,59 @@ TAGSFILE=	tags
 VERSION=	`date +%Y%m%d`
 DISTDIR=	../libsnet-${VERSION}
 
-all:		libsnet.a
 
-libsnet.a: ${OBJ}
-	@echo "building normal libsnet.a"
-	@ar cru libsnet.a ${OBJ}
-	@ranlib libsnet.a
+.SUFFIXES: .o .lo
+
+.c.o:
+	$(LIBTOOL) --mode=compile \
+	  $(CC) -c $(CFLAGS) $<
+	@if test x_$(PROFILED) = x_true ; then echo "building profiled $@" ; \
+	  ( mkdir -p profiled; cd profiled ; ../$(LIBTOOL) --mode=compile \
+	  $(CC) -c $(CFLAGS) -p -I.. -I$(srcdir) `if [ -f $< ]; then echo $<; \
+	  else echo ../$<; fi` >/dev/null 2>&1 ) ; fi
+
+.c.lo:
+	$(LIBTOOL) --mode=compile \
+	  $(CC) -c $(CFLAGS) $<
+	@if test x_$(PROFILED) = x_true ; then echo "building profiled $@" ; \
+	  ( mkdir -p profiled; cd profiled ; ../$(LIBTOOL) --mode=compile \
+	  $(CC) -c $(CFLAGS) -p -I.. -I$(srcdir) `if [ -f $< ]; then echo $<; \
+	  else echo ../$<; fi` >/dev/null 2>&1 ) ; fi
+
+
+all:		libsnet.la
+
+libsnet.la:	$(OBJ) $(LOBJ)
+	$(LIBTOOL) --mode=link \
+	  $(CC) -o libsnet.la $(LDFLAGS) $(LOBJ) -rpath $(libdir) -version-info 0:0:0
+	@if test x_$(PROFILED) = x_true ; then echo "building profiled $@" ; \
+	  ( cd profiled ; ../$(LIBTOOL) --mode=link \
+	  $(CC) -o libsnet_p.la $(LDFLAGS) $(LOBJ) -rpath $(libdir) \
+	  -version-info 0:0:0 >/dev/null 2>&1 ) ; fi
 
 install:	all
-	mkdir -p $(DESTDIR)$(libdir) $(DESTDIR)$(includedir)
-	$(INSTALL) -c -m 644 snet.h $(DESTDIR)$(includedir)/snet.h
-	$(INSTALL) -c -m 644 libsnet.a $(DESTDIR)$(libdir)/libsnet.a
+	mkdir -p $(libdir)
+	chmod 755 $(libdir)
+	mkdir -p $(includedir)
+	chmod 755 $(includedir)
+	$(INSTALL) -c -m 644 snet.h $(includedir)/snet.h
+	$(LIBTOOL) --mode=install \
+	  $(INSTALL) -c -m 644 libsnet.la $(libdir)/libsnet.la
+	@if test x_$(PROFILED) = x_true ; then \
+	  echo "installing profiled libraries" ; \
+	  ( cd profiled ; ../$(LIBTOOL) --mode=install \
+	  $(INSTALL) -c -m 644 libsnet_p.la \
+	  $(libdir)/libsnet_p.la >/dev/null 2>&1 ) ; fi
 
 clean:
-	rm -f *.o libsnet.a
+	rm -f *.o *.lo libsnet.la profiled/libsnet_p.la profiled/snet.lo
 	rm -f *.bak *[Ee]rrs tags
+	rm -rf .libs profiled/.libs
 
 dist:		distclean
 	mkdir ${DISTDIR}
-	tar chfFFX - EXCLUDE . | ( cd ${DISTDIR}; tar xvf - )
+	#tar chfFFX - EXCLUDE . | ( cd ${DISTDIR}; tar xvf - )
+	tar -c -f - . | ( cd ${DISTDIR}; tar xvpf - -C ${DISTDIR} )
 	echo ${VERSION} > ${DISTDIR}/VERSION
 
 distclean:	clean
@@ -77,5 +110,4 @@ depend:
 	mv Makefile.tmp Makefile
 
 # DO NOT DELETE THIS LINE
-
 
