--- a/Makefile.in
+++ b/Makefile.in
@@ -69,7 +69,7 @@ OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
 INCPATH=	-I. -Idenser -Ilibsnet @CPPFLAGS@ @BDB_CPPFLAGS@ @LIBSSL_CPPFLAGS@ @LDAP_CPPFLAGS@ @LIBWRAP_CPPFLAGS@ @LIBSASL_CPPFLAGS@${SRCPFX_INCPATH}
 DEFS=		-DTLS -g @DEFS@
-LIBPATH=	-Ldenser -Llibsnet @LDFLAGS@ @BDB_LDFLAGS@ @LIBSSL_LDFLAGS@ @LDAP_LDFLAGS@ @LIBWRAP_LDFLAGS@ @LIBSASL_LDFLAGS@
+LIBPATH=	-Ldenser -Llibsnet/.libs @LDFLAGS@ @BDB_LDFLAGS@ @LIBSSL_LDFLAGS@ @LDAP_LDFLAGS@ @LIBWRAP_LDFLAGS@ @LIBSASL_LDFLAGS@
 LIBS=		-ldnsr -lsnet @LIBS@ @EXTRALIBS@
 TAGSFILE=	tags
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
