Fix checks for other libraries
Use a generic macro to reduce code repetition.

Package maintainers can now use FOO_CPPFLAGS and FOO_LDFLAGS to set the
library and header locations, e.g.
LIBSASL_LDFLAGS=-L/usr/lib64/sasl2

This removes the hardcoded assumption that if we find /path/include/foo.h
the corresponding library is in /path/lib/, which isn't always the case.

--- a/Makefile.in
+++ b/Makefile.in
@@ -64,15 +64,15 @@ SIMCKOBJ=	simck.o base64.o
 CC=		@CC@
 OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
-INCPATH=	-I. -Idenser -Ilibsnet @CPPFLAGS@ ${SRCPFX_INCPATH}
+INCPATH=	-I. -Idenser -Ilibsnet @CPPFLAGS@ @BDB_CPPFLAGS@ @LIBSSL_CPPFLAGS@ @LDAP_CPPFLAGS@ @LIBWRAP_CPPFLAGS@ @LIBSASL_CPPFLAGS@${SRCPFX_INCPATH}
 DEFS=		-DTLS -g @DEFS@
-LIBPATH=	-Ldenser -Llibsnet @LDFLAGS@
-LIBS=		-ldnsr -lsnet @LIBS@
+LIBPATH=	-Ldenser -Llibsnet @LDFLAGS@ @BDB_LDFLAGS@ @LIBSSL_LDFLAGS@ @LDAP_LDFLAGS@ @LIBWRAP_LDFLAGS@ @LIBSASL_LDFLAGS@
+LIBS=		-ldnsr -lsnet @LIBS@ @EXTRALIBS@
 TAGSFILE=	tags
-CFLAGS=		${DEFS} ${OPTOPTS} @SIMTACPPFLAGS@ ${INCPATH}
+CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
 
-SIMTALIBPATH=	${LIBPATH} @SIMTALDFLAGS@
-SIMTALIBS=	${LIBS} @SIMTALIBS@
+SIMTALIBPATH=	${LIBPATH}
+SIMTALIBS=	${LIBS}
 
 MAN1TARGETS=	simsendmail.1
 MAN8TARGETS=	simta.8
