--- a/libsnet/configure.ac
+++ b/libsnet/configure.ac
@@ -1,9 +1,11 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(libsnet,VERSION,rsug@umich.edu) 
-AC_CONFIG_HEADER(config.h)
+AC_INIT(libsnet, 1.0.0, rsug@umich.edu) 
+AM_INIT_AUTOMAKE([foreign])
 AC_PREREQ(2.52)
 AC_COPYRIGHT([Copyright (c) 1995-2003 Regents of The University of Michigan.  All Rights Reserved.])
+AC_CONFIG_HEADER(config.h)
 AC_CONFIG_SRCDIR([snet.c])
+AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
 AC_PROG_AWK
