Change handling of pidfile
Make the location configurable at runtime and don't try to create it
during installation (that makes no sense).

--- a/simta.conf
+++ b/simta.conf
@@ -73,6 +73,10 @@
 #
 #BASE_DIR			/var/spool/simta
 
+# Designate a pidfile.
+#
+#PID_FILE                       /var/run/simta.pid
+
 # SMTP RECEIVE & DELIVER TIMERS
 # All RECEIVE timers are for incoming SMTP requests where simta is acting as
 # a SMTP server.  All DELIVER timers are for when simta is attempting to
