--- a/Makefile.in
+++ b/Makefile.in
@@ -36,27 +36,27 @@ SIMTAOBJ=	@SIMTA_OBJ@ daemon.o receive.o argcargv.o envelope.o base64.o \
 TLSCONOBJ=	tlsconnect.o
 SIMCOBJ=	@SIMC_OBJ@ simc.o line_file.o envelope.o header.o \
 		simta.o ll.o address.o bdb.o bounce.o queue.o expand.o \
-		smtp.o ml.o mx.o wildcard.o red.o
+		tls.o smtp.o ml.o mx.o wildcard.o red.o
 SIMSENDOBJ=	@SIMSEND_OBJ@ simsend.o line_file.o envelope.o header.o \
 		simta.o ll.o address.o bdb.o bounce.o queue.o expand.o \
-		smtp.o ml.o mx.o wildcard.o red.o
+		tls.o smtp.o ml.o mx.o wildcard.o red.o
 SIMLOGOBJ=	simlog.o
 EXPANDEROBJ=	@EXPANDER_OBJ@ expander.o queue.o ll.o line_file.o \
-		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		envelope.o ml.o simta.o tls.o smtp.o expand.o address.o bdb.o \
 		header.o bounce.o q_cleanup.o mx.o wildcard.o red.o
 SIMRBLOBJ=	@EXPANDER_OBJ@ simrbl.o queue.o ll.o line_file.o \
-		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		envelope.o ml.o simta.o tls.o smtp.o expand.o address.o bdb.o \
 		header.o bounce.o q_cleanup.o mx.o wildcard.o red.o
 SIMREVERSEOBJ=	@EXPANDER_OBJ@ simreverse.o queue.o ll.o line_file.o \
-		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		envelope.o ml.o simta.o tls.o smtp.o expand.o address.o bdb.o \
 		header.o bounce.o q_cleanup.o mx.o wildcard.o red.o
 QRUNNEROBJ=	@Q_RUNNER_OBJ@ q_runner.o queue.o ll.o line_file.o \
-		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		envelope.o ml.o simta.o tls.o smtp.o expand.o address.o bdb.o \
 		header.o bounce.o q_cleanup.o mx.o wildcard.o red.o
 QCLEANUPOBJ=	q_cleanup.o queue.o ll.o line_file.o envelope.o ml.o \
-		smtp.o simta.o mx.o wildcard.o red.o
+		tls.o smtp.o simta.o mx.o wildcard.o red.o
 SIMALIASOBJ=	@EXPANDER_OBJ@ simalias.o queue.o ll.o line_file.o \
-		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		envelope.o ml.o simta.o tls.o smtp.o expand.o address.o bdb.o \
 		header.o bounce.o q_cleanup.o mx.o wildcard.o red.o
 SLAOBJ=		sla.o
 SIMCKOBJ=	simck.o base64.o
