First pass at outbound TLS, Secondary MX, and RED rules cleanup.

--- a/config.h.in
+++ b/config.h.in
@@ -1,9 +1,5 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
-/* Define to 1 if you have the declaration of `tzname', and to 0 if you don't.
-   */
-#undef HAVE_DECL_TZNAME
-
 /* Define to 1 if you have LDAP */
 #undef HAVE_LDAP
 
@@ -28,7 +24,7 @@
 /* Define to 1 if you have LIBWRAP */
 #undef HAVE_LIBWRAP
 
-/* Define to 1 if `tm_zone' is a member of `struct tm'. */
+/* Define to 1 if `tm_zone' is member of `struct tm'. */
 #undef HAVE_STRUCT_TM_TM_ZONE
 
 /* Define to 1 if your `struct tm' has `tm_zone'. Deprecated, use
@@ -50,9 +46,6 @@
 
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
-
-/* Define to the home page for this package. */
-#undef PACKAGE_URL
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
