--- a/simta.conf
+++ b/simta.conf
@@ -308,9 +308,13 @@
 #
 #SIMSEND_STRICT_FROM_OFF
 
-# Enable TLS
+# TLS_OUTBOUND <OPTIONAL|REQUIRED> 
 #
-#TLS_ON
+#TLS_OUTBOUND OPTIONAL
+
+# TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED> 
+#
+#TLS_CERT_OUTBOUND OPTIONAL
 
 # Default alias DB file.  If no filename is given, default DB is disabled.
 #
@@ -332,9 +336,10 @@
 #
 #USE_RANDFILE
 
-#Don't check to see if hostnames are MXed to us.
+# DNS_CONFIG			< ON | OFF >
+# Automatically accept mail if primary hostnames are MXed to us.
 #
-#DNS_CONFIG_OFF
+#DNS_CONFIG			OFF
 
 # Size of backlog for incoming smtp connections.
 #
@@ -442,14 +447,9 @@
 #
 # @DOMAIN D KEYWORD [ args ]
 #
-# Disable punting for a domain
+# Allow or disallow punting of all messages on a per-domain basis.
 #
-# @hostname     D       NO_PUNT
-#
-# Allow punting of all messages for a domain, even when the delivery failure
-# is to the jail host.
-#
-# @hostname     D       PUNT
+# @hostname	D	PUNTING	<ENABLED|DISABLED>
 #
 # Modify the minimum and maximum queue wait times for a domain
 #
@@ -462,3 +462,11 @@
 #
 # @hostname     D       MAILER /path/to/binary [ args ]
 # @hostname     D       MAILER /usr/bin/procmail -f $S -d $R
+#
+# Set outbound TLS policy for a domain.
+#
+# @hostanme	D	TLS_OUTBOUND <OPTIONAL|REQUIRED>
+#
+# Set outbound TLS_CERT policy for a domain.
+#
+# @hostanme	D	TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED>
