added support for non-blocking SSL_connect()

--- a/simta.conf
+++ b/simta.conf
@@ -120,6 +120,10 @@
 # This is the total number of seconds that simta will allow for any outgoing
 # DATA session.  0 means no timer, or infinity.
 #DELIVER_DATA_SESSION_TIMEOUT	  	0
+#
+# This is the total number of seconds that simta will allow for any outgoing
+# SSL Connect call.  0 uses the blocking system call.
+#DELIVER_SSL_CONNECT_TIMER	  	0
 
 # Path to the default local mailer, and arguments.  This overrides configure.
 #
