SSL_accept non-blocking

--- a/simta.conf
+++ b/simta.conf
@@ -109,6 +109,10 @@
 # or tries to send another message.
 #RECEIVE_ACCEPTED_MESSAGE_TIMER		-1
 #
+# This is the total number of seconds that simta will allow for any inbound
+# SSL Accept call.  0 uses the blocking system call.
+#RECEIVE_SSL_ACCEPT_TIMER	  	0
+#
 # This is the total number of seconds that simta will wait for any outgoing
 # SMTP command to be acknowledged.
 #DELIVER_COMMAND_LINE_TIMEOUT	  	300
