Add an option to randomise message delivery order

--- a/simta.conf
+++ b/simta.conf
@@ -207,6 +207,11 @@
 #
 #AGGRESSIVE_DELIVERY		[ ON | OFF ]
 
+# During outbound SMTP delivery randomise the order in which messages are
+# delivered.  Default is OFF.
+#
+#SHUFFLE_QUEUES                 [ ON | OFF ]
+
 # Call a content filter to examine the DATA portion of an incoming SMTP
 # message.  
 #
