--- a/simta.conf
+++ b/simta.conf
@@ -129,6 +129,10 @@
 # SSL Connect call.  0 uses the blocking system call.
 #DELIVER_SSL_CONNECT_TIMER	  	0
 
+# The maximum number of messages that we will attempt in a single outbound
+# connection. Default is unlimited (0).
+#DELIVER_MAX_MESSAGES_PER_CONNECTION    50
+
 # Path to the default local mailer, and arguments.  This overrides configure.
 #
 # Variable replacement in the arguments is as follows:
