Cosmetic: fix typos

--- a/simta.conf
+++ b/simta.conf
@@ -482,8 +482,8 @@
 #
 # Set outbound TLS policy for a domain.
 #
-# @hostanme	D	TLS_OUTBOUND <OPTIONAL|REQUIRED>
+# @hostname	D	TLS_OUTBOUND <OPTIONAL|REQUIRED>
 #
 # Set outbound TLS_CERT policy for a domain.
 #
-# @hostanme	D	TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED>
+# @hostname	D	TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED>
