Add the ability to set a custom cipher string
http://www.ietf.org/mail-archive/web/tls/current/msg10471.html

Windows 2003 has a broken TLS stack that
    a) Doesn't implement DES-CBC3-SHA correctly (neither OpenSSL nor GnuTLS
        interoperates with it)
    b) With OpenSSL's default cipherlist always selects DES-CBC3-SHA
        and, if that cipher is excluded, fails to find other supported
        ciphers because it only looks at the first 64 elements of the
        cipherlist.

--- a/simta.conf
+++ b/simta.conf
@@ -333,6 +333,10 @@
 #
 #TLS_CERT_OUTBOUND OPTIONAL
 
+# TLS_CIPHERS_OUTBOUND <cipher string>
+#
+#TLS_CIPHERS_OUTBOUND   aRSA+AES128+kEECDH:aRSA+AES128+kEDH:aRSA+AES128+kRSA:RC4-SHA:@STRENGTH
+
 # Default alias DB file.  If no filename is given, default DB is disabled.
 #
 #ALIAS_DB			/etc/alias.db
@@ -487,3 +491,7 @@
 # Set outbound TLS_CERT policy for a domain.
 #
 # @hostname	D	TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED>
+#
+# Set outbound TLS cipher suite for a domain.
+#
+# @hostname     D       TLS_CIPHERS_OUTBOUND <cipher string>
