Add a new TLS policy: DISABLED

--- a/simta.conf
+++ b/simta.conf
@@ -325,11 +325,11 @@
 #
 #SIMSEND_STRICT_FROM_OFF
 
-# TLS_OUTBOUND <OPTIONAL|REQUIRED> 
+# TLS_OUTBOUND <OPTIONAL|REQUIRED|DISABLED>
 #
 #TLS_OUTBOUND OPTIONAL
 
-# TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED> 
+# TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED>
 #
 #TLS_CERT_OUTBOUND OPTIONAL
 
@@ -486,7 +486,7 @@
 #
 # Set outbound TLS policy for a domain.
 #
-# @hostname	D	TLS_OUTBOUND <OPTIONAL|REQUIRED>
+# @hostname	D	TLS_OUTBOUND <OPTIONAL|REQUIRED|DISABLED>
 #
 # Set outbound TLS_CERT policy for a domain.
 #
