--- a/simta.conf
+++ b/simta.conf
@@ -483,7 +483,7 @@
 # Data of message will be on standard input.
 #
 # @hostname     D       MAILER /path/to/binary [ args ]
-# @hostname     D       MAILER /usr/bin/procmail -f $S -d $R
+# @hostname     D       MAILER /usr/libexec/simta/simda $R /usr/bin/procmail -f $S
 #
 # Set outbound TLS policy for a domain.
 #
